--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@iobroker/testing": "^2.4.1",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/express": "^4.17.10",
     "@types/gulp": "^4.0.7",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.19",
@@ -37,6 +38,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.17.0",
+    "express": "^4.17.1",
     "gulp": "^4.0.2",
     "mocha": "^8.2.1",
     "proxyquire": "^2.1.3",
