Do not generate source maps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
         // Consider targetting es2019 or higher if you only support Node.js 12+
         "target": "es2018",
 
-        "sourceMap": true,
+        "sourceMap": false,
         "inlineSourceMap": false,
         "watch": false
     },
