--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "url": "https://github.com/a-i-ks/ioBroker.volumio"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.4.0"
+    "@iobroker/adapter-core": "^2.4.0",
+    "axios": "^0.21.1",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@iobroker/testing": "^2.4.1",
@@ -34,11 +36,9 @@
     "@types/sinon-chai": "^3.2.5",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
-    "axios": "^0.21.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.17.0",
-    "express": "^4.17.1",
     "gulp": "^4.0.2",
     "mocha": "^8.2.1",
     "proxyquire": "^2.1.3",
