--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@iobroker/adapter-core": "^2.4.0",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/chai-as-promised": "^7.1.3",
     "@types/express": "^4.17.10",
     "@types/gulp": "^4.0.7",
+    "@types/ip": "^1.1.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.19",
     "@types/proxyquire": "^1.3.28",
