--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@iobroker/adapter-core": "^2.4.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ip": "^1.1.5"
   },
   "devDependencies": {
     "@iobroker/testing": "^2.4.1",
