--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-.git
-.idea
+# No dot-directories except github/vscode
+.*/
+!.vscode/
+!.github/
+
 *.code-workspace
 node_modules
 nbproject
-
-# Sourcemaps
-maps/
 
 # npm package files
 iobroker.*.tgz
