--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "node": ">= 18"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.1.4"
+    "@iobroker/adapter-core": "^3.1.4",
+    "axios": "^1.6.8",
+    "body-parser": "1.20.2",
+    "express": "^4.19.2",
+    "ip": "^2.0.1"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.7.0",
@@ -34,6 +38,8 @@
     "@tsconfig/node18": "^18.2.4",
     "@types/chai": "^4.3.16",
     "@types/chai-as-promised": "^7.1.8",
+    "@types/express": "4.17.21",
+    "@types/ip": "1.1.3",
     "@types/mocha": "^10.0.6",
     "@types/node": "^18.19.33",
     "@types/proxyquire": "^1.3.31",
@@ -41,8 +47,8 @@
     "@types/sinon-chai": "^3.2.12",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
-    "chai-as-promised": "^7.1.1",
     "chai": "^4.4.1",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.57.0",
     "mocha": "^10.4.0",
     "proxyquire": "^2.1.3",
