feat: implement dual API support (REST and WebSocket) - WIP
This commit adds support for both REST and WebSocket APIs in the Volumio adapter.

**New Features:**
- Complete Volumio client abstraction layer with interface (IVolumioClient)
- REST API client implementation with polling for state changes
- WebSocket client implementation with real-time state updates via Socket.IO
- Client factory for dynamic instantiation based on configuration
- New adapter configuration options:
  - API mode selection (REST vs WebSocket, default: WebSocket)
  - Poll interval for REST mode
  - Reconnection settings for WebSocket mode

**Configuration Updates:**
- Added apiMode, pollInterval, reconnectAttempts, reconnectDelay to native config
- Updated jsonConfig.json with new settings UI
- Marked HTTP push notifications as deprecated (REST-only feature)
- Updated adapter description to reflect dual API support
- Disabled strict JSDoc rules in ESLint config

**Main Adapter Refactoring (IN PROGRESS):**
- Added client initialization and callback handlers
- Updated connectToVolumio, getSystemInfo, getPlayerState, pingVolumio methods
- Added type definitions for new config properties
- Remaining: Replace all axios calls in playback control methods

**Library Structure:**
- src/lib/volumioClient.ts - Interface and type definitions
- src/lib/restVolumioClient.ts - REST API implementation
- src/lib/websocketVolumioClient.ts - WebSocket implementation
- src/lib/volumioClientFactory.ts - Factory for client creation

**Dependencies:**
- socket.io-client@^4.8.1 (already added in previous commit)

NOTE: This is work in progress. Main adapter refactoring is not complete -
playback control methods still use axios and need to be migrated to use the client.

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -16,6 +16,74 @@
             "md": 6,
             "lg": 4
         },
+        "apiMode": {
+            "type": "select",
+            "label": "API Mode",
+            "options": [
+                {
+                    "value": "websocket",
+                    "label": "WebSocket (recommended)"
+                },
+                {
+                    "value": "rest",
+                    "label": "REST API"
+                }
+            ],
+            "default": "websocket",
+            "newLine": true,
+            "sm": 12,
+            "md": 6,
+            "lg": 4
+        },
+        "apiModeDescription": {
+            "type": "staticText",
+            "text": "WebSocket mode provides real-time updates and is more efficient. REST mode uses polling to check for state changes.",
+            "newLine": true,
+            "sm": 12
+        },
+        "pollInterval": {
+            "type": "number",
+            "label": "Poll interval (seconds)",
+            "min": 1,
+            "max": 60,
+            "default": 2,
+            "hidden": "data.apiMode !== 'rest'",
+            "help": "How often to check for state changes in REST mode",
+            "newLine": true,
+            "sm": 12,
+            "md": 6,
+            "lg": 4
+        },
+        "reconnectAttempts": {
+            "type": "number",
+            "label": "Reconnection attempts",
+            "min": 1,
+            "max": 20,
+            "default": 5,
+            "hidden": "data.apiMode !== 'websocket'",
+            "help": "Number of times to try reconnecting after connection loss",
+            "newLine": true,
+            "sm": 12,
+            "md": 6,
+            "lg": 4
+        },
+        "reconnectDelay": {
+            "type": "number",
+            "label": "Reconnection delay (seconds)",
+            "min": 1,
+            "max": 30,
+            "default": 2,
+            "hidden": "data.apiMode !== 'websocket'",
+            "help": "Wait time between reconnection attempts",
+            "sm": 12,
+            "md": 6,
+            "lg": 4
+        },
+        "dividerApi": {
+            "type": "divider",
+            "height": 3,
+            "newLine": true
+        },
         "checkConnection": {
             "type": "checkbox",
             "label": "Check connection to Volumio",
@@ -59,14 +127,16 @@
         },
         "descriptionForSubscribeToStateChanges": {
             "type": "staticText",
-            "text": "The adapter can be used in a event driven fashion. Volumio can notify via POST calls when state changes.\nThis is a much more efficient and elegant way to retrieve informations, instead of continuously polling the relevant information.",
+            "text": "DEPRECATED: HTTP Push notifications are only available in REST mode. For real-time updates, use WebSocket mode instead.\nVolumio can notify via POST calls when state changes. This requires REST mode to be enabled.",
             "newLine": true,
+            "hidden": "data.apiMode !== 'rest'",
             "sm": 12
         },
         "subscribeToStateChanges": {
             "type": "checkbox",
-            "label": "Subscribe to player state changes",
+            "label": "Subscribe to player state changes (deprecated)",
             "default": false,
+            "hidden": "data.apiMode !== 'rest'",
             "newLine": true,
             "sm": 12,
             "md": 6,
@@ -77,6 +147,7 @@
             "label": "Subscription port",
             "default": 3042,
             "disabled": "!data.subscribeToStateChanges",
+            "hidden": "data.apiMode !== 'rest'",
             "newLine": true,
             "sm": 12,
             "md": 6,
