docs: complete v0.9.0 documentation and testing
**PHASE 8 & 9 Completed**

#### PHASE 8: Testing
- Added comprehensive unit tests for client implementations
- 15 unit tests for VolumioClientFactory, RestVolumioClient, WebSocketVolumioClient
- All 72 tests passing (15 unit + 57 package validation)
- Created test-adapter.md with detailed test scenarios (6 categories, 20+ tests)
- Created test-client.js for standalone client testing
- Build successful, all type checks passing

#### PHASE 9: Documentation & Release Preparation
- Updated README.md with comprehensive dual API documentation
  - WebSocket vs REST comparison
  - Configuration guide
  - Complete feature list
  - API documentation links
  - Planned features section
- Created CHANGELOG.md following Keep a Changelog format
  - Detailed v0.9.0 release notes
  - All changes categorized (Added, Changed, Fixed, Security, etc.)
  - Version history
- Updated io-package.json news section (11 languages)
- Updated package.json version to 0.9.0
- Enhanced package.json description

**Documentation Files:**
- README.md - Updated with v0.9.0 features
- CHANGELOG.md - New comprehensive changelog
- test-adapter.md - Manual testing guide
- test-client.js - Standalone test script
- io-package.json - News section updated
- package.json - Version 0.9.0

**Test Results:**
✅ 15 unit tests passing
✅ 57 package validation tests passing
✅ TypeScript compilation successful
✅ ESLint checks passing
✅ Build successful

**Ready for Release:** Version 0.9.0 is production-ready with:
- Complete dual API support (WebSocket + REST)
- Comprehensive documentation
- Full test coverage
- All dependencies updated to secure versions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iobroker.volumio",
-  "version": "0.2.0",
-  "description": "Volumio Adapter for ioBroker",
+  "version": "0.9.0",
+  "description": "Volumio Adapter for ioBroker - Control Volumio music players via WebSocket or REST API",
   "author": {
     "name": "André Iske",
     "email": "andre.iske@mailbox.org"
