--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.4",
     "express": "^4.22.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^2.5.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^5.0.0",
@@ -46,6 +46,7 @@
     "@types/proxyquire": "^1.3.31",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^3.2.12",
+    "@types/socket.io-client": "^1.4.36",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "chai": "^4.5.0",
