--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,26 @@
 # Dependabot will run on day 13 of each month at 01:37 (Europe/Berlin timezone)
 version: 2
 updates:
+  - package-ecosystem: npm
+    directory: "/"
+    schedule:
+      interval: monthly
+      day: 6
+      time: "00:05"
+      timezone: Europe/Berlin
+    open-pull-requests-limit: 5
+    assignees:
+      - a-i-ks
+    versioning-strategy: increase
 
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "cron"
-      timezone: "Europe/Berlin"
-      cronjob: "37 1 13 * *"
-    open-pull-requests-limit: 15
+      interval: monthly
+      day: 6
+      time: "00:05"
+      timezone: Europe/Berlin
+    open-pull-requests-limit: 5
     assignees:
       - "a-i-ks"
     versioning-strategy: "increase"
