--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
       - uses: ioBroker/testing-action-check@v1
         with:
-          node-version: '18.x'
+          node-version: '20.x'
           # Uncomment the following line if your adapter cannot be installed using 'npm ci'
           # install-command: 'npm install'
           type-checking: true
@@ -41,7 +41,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x, 22.x, 24.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
@@ -53,9 +53,6 @@ jobs:
           # install-command: 'npm install'
           build: true
 
-  # TODO: To enable automatic npm releases, create a token on npmjs.org 
-  # Enter this token as a GitHub secret (with name NPM_TOKEN) in the repository options
-  # Then uncomment the following block:
 
  # Deploys the final package to NPM
   deploy:
@@ -77,7 +74,7 @@ jobs:
    steps:
      - uses: ioBroker/testing-action-deploy@v1
        with:
-         node-version: '18.x'
+         node-version: '20.x'
          # Uncomment the following line if your adapter cannot be installed using 'npm ci'
          # install-command: 'npm install'
          build: true
