--- a/package.json
+++ b/package.json
@@ -25,26 +25,26 @@
   "dependencies": {
     "@iobroker/adapter-core": "^3.3.2",
     "axios": "^1.7.2",
-    "body-parser": "^1.20.4",
-    "express": "^4.22.1",
-    "socket.io-client": "^2.5.0"
+    "body-parser": "^2.2.1",
+    "express": "^5.2.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^5.0.0",
     "@alcalzone/release-script-plugin-iobroker": "^4.0.0",
     "@alcalzone/release-script-plugin-license": "^4.0.0",
     "@alcalzone/release-script-plugin-manual-review": "^4.0.0",
-    "@iobroker/adapter-dev": "^1.4.0",
-    "@iobroker/eslint-config": "^0.1.6",
+    "@iobroker/adapter-dev": "^1.5.0",
+    "@iobroker/eslint-config": "^2.2.0",
     "@iobroker/testing": "^5.2.2",
-    "@tsconfig/node18": "^18.2.4",
+    "@tsconfig/node18": "^18.2.6",
     "@types/chai": "^4.3.20",
     "@types/chai-as-promised": "^7.1.8",
     "@types/express": "^5.0.0",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^22.10.2",
+    "@types/node": "^25.0.3",
     "@types/proxyquire": "^1.3.31",
-    "@types/sinon": "^17.0.3",
+    "@types/sinon": "^21.0.0",
     "@types/sinon-chai": "^3.2.12",
     "@types/socket.io-client": "^1.4.36",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -54,12 +54,12 @@
     "eslint": "^9.39.2",
     "mocha": "^11.0.1",
     "proxyquire": "^2.1.3",
-    "rimraf": "^5.0.10",
-    "sinon": "^19.0.2",
+    "rimraf": "^6.1.2",
+    "sinon": "^21.0.1",
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
-    "typescript": "~5.5.4"
+    "typescript": "^5.9.3"
   },
   "main": "build/main.js",
   "files": [
