chore: configure release-script to use README.md for changelog

--- a/.releaseconfig.json
+++ b/.releaseconfig.json
@@ -4,6 +4,9 @@
         "license",
         "manual-review"
     ],
+    "changelog": {
+        "file": "README.md"
+    },
     "exec": {
         "before_commit": "npm run build"
     }
